--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,221 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ .flex-column{
+  flex-direction: column;
 }
+.flex-sb{
+  justify-content: space-between;
+}
+
+body {
+  margin: 0;
+  font-size: 18px;
+}
+
+
+#nav-list {
+  background:  rgb(10, 10, 10);
+  height: 90px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
+  position: fixed;
+  color: white;
+}
+
+
+.nav-bar {
+  padding: 10px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  text-decoration: none;
+}
+
+
+li{
+  padding: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  border-bottom: solid rgb(156, 108, 5) 1.3px;
+  font-size: 17px;
+
+}
+
+#nav-list li a:hover {
+    color: rgb(12, 14, 14);
+    background-color: aliceblue;
+    border-radius: 5px;
+    padding: 3px;
+}
+
+
+.logo{
+  margin-left: 6%;
+}
+
+
+
+#slide-text {
+    height: 450px;
+    background-color: rgba(204, 225, 228, 0.664);
+    text-align: center;
+    padding-top: 12%;
+    background-image: url("/public/me.jpg");
+    color: white;
+    font-size: 20px;
+}
+
+
+.new-post-form {
+    height: 350px;
+    display: column;
+    padding: 25px;
+    background-color: rgba(111, 10, 151, 0.664);
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+#form-container {
+    display: flex;
+    flex-direction: column;
+}
+.myPosts{
+  height: 200px;
+  text-align: center;
+  padding: 5%;
+}
+
+
+
+#footer{
+    background-color: rgb(48, 46, 46);
+    height: 480px;
+    opacity: 0.9;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px;
+    align-items: center;
+}
+
+
+
+.about-us{
+  width: 40%;
+}
+
+
+
+input[type=submit] {
+    background-color: rgba(204, 225, 228, 0.664);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+    background-color: rgb(8, 0, 0);
+    color: white;
+  }
+
+
+  input[type=text], textarea {
+    width: 50%; 
+    display: flex;
+    flex-direction: column;
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: horizontal;
+    overflow: hidden;
+    border: solid black 1px;
+  }
+
+.support{
+  padding: 12px;
+  margin: 18px;
+  border-radius: 10px;
+  }
+
+
+  .support p{
+    padding-top: 40px;
+  }
+  
+
+  .support form{
+    width: 230%;
+  }
+
+  .support h3{
+    font-size: 25px;
+  }
+
+  form.new-poem-form {
+    border: solid black 1px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    width: 70px;
+  }
+  
+  form.new-poem-form > input,
+  form.new-poem-form > textarea {
+    font-size: 1em;
+    font-family: sans-serif;
+    margin-bottom: 0.5em;
+  }
+  
+  input[type="submit"],
+  button {
+    font-weight: bold;
+    font-size: 1em;
+    background: rgba(69, 5, 233, 0.664);
+    border: solid black 2px;
+    padding: 0.3em;
+    cursor: pointer;
+    color: black;
+    margin-top: 10px;
+  }
+
+  .myPosts >button{
+    border-radius: 8px;
+    margin-top: 5px;
+  }
+
+  .myPosts{
+    height: 350px;
+  }
+  
+  
+  @media screen and (max-width: 300px) {
+    #slider{
+      width: 100%;
+      margin-top: 0;
+    }
+  }
+  
+
+
+
+
